--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ body, button {
   border-radius: 16px;
   background: linear-gradient(180deg, rgba(39, 1, 15, 0) 0%, #001944 100%), url(img/game_2.jpg), lightgray 50%/cover no-repeat;
   width: 378px;
+  height: 300px;
   color: #FFF;
   font-size: 24px;
   font-family: Montserrat;
@@ -121,6 +122,7 @@ body, button {
   font-weight: 600;
   line-height: 32px;
   width: 378px;
+  height: 300px;
   grid-column: span 4;
   display: flex;
   flex-direction: column;
