--- a/style.scss
+++ b/style.scss
@@ -104,6 +104,7 @@ body, button {
         border-radius: 16px;
         background: linear-gradient(180deg, rgba(39, 1, 15, 0.00) 0%, #001944 100%), url(img/game_2.jpg), lightgray 50% / cover no-repeat;
         width: 378px;
+        height: 300px;
         color: #FFF;
         font-size: 24px;
         font-family: Montserrat;
@@ -132,6 +133,7 @@ body, button {
         font-weight: 600;
         line-height: 32px;
         width: 378px;
+        height: 300px;
         grid-column: span 4;
         display: flex;
         flex-direction: column;
@@ -146,6 +148,7 @@ body, button {
 .span {
     padding-left: 32px;
     padding-bottom: 32px;
+    
 }
 
 
