--- a/style.scss
+++ b/style.scss
@@ -59,6 +59,11 @@ body, button {
         margin-left: 120px;
         margin-right: 1085.94px;
         margin-bottom: 493.29px;
+
+        &:hover {
+            transform: scale(1.05);
+            box-shadow: 0 0 5px #ccc;
+        }
     }
 }
 
@@ -76,6 +81,11 @@ body, button {
     padding-bottom: 128px;
     margin-left: 120px;
     margin-right: 120px;
+
+    &__item:hover {
+        transform: scale(1.02);
+        box-shadow: 0 0 5px #ccc;
+    }
    
 
 
