--- a/_mobile.scss
+++ b/_mobile.scss
@@ -64,4 +64,58 @@
         width: 375px;
         height: 1221px;
     }
+    .game {
+        width: 375px;
+        
+
+        &__img {
+            display: none;
+
+            &_mob {
+                display: block;
+                padding-top: 64px;
+                
+                
+            }
+        }
+
+        &_season {
+            display: grid;
+            width: 343px;
+            height: 218px;
+            padding-top: 51px;
+            
+            
+            
+
+            &__heading {
+                font-size: 32px;
+                text-align: center;
+                
+            }
+
+            &__text {
+                color: #FFF;
+                text-align: center;
+                font-family: Montserrat;
+                font-size: 14px;
+                font-style: normal;
+                font-weight: 300;
+                line-height: 22px;
+                width: 343px;
+                height: 66px;
+            }
+
+            &__button {
+                color: #FFF;
+                font-family: Montserrat;
+                font-size: 18px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: normal;
+                margin-left: 65px;
+            }
+        }
+    }
 }
+
