--- a/style.css
+++ b/style.css
@@ -145,6 +145,60 @@ body, button {
   padding-bottom: 32px;
 }
 
+.game {
+  width: 1440px;
+  height: 800px;
+  background: #000915;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.game__img {
+  padding-top: 233px;
+}
+.game__img_mob {
+  display: none;
+}
+.game_season {
+  padding-top: 282px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.game_season__heading {
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.game_season__text {
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 32px;
+  width: 584px;
+}
+.game_season__button {
+  width: 234.063px;
+  height: 48.603px;
+  border-radius: 30px;
+  background: #9C0332;
+  color: #FFF;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.game_season__button:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 5px #ccc;
+}
+
 @media (max-width: 767px) {
   body {
     font-family: "Montserrat", sans-serif;
@@ -199,5 +253,45 @@ body, button {
   .heading {
     width: 375px;
     height: 1221px;
+  }
+  .game {
+    width: 375px;
+  }
+  .game__img {
+    display: none;
+  }
+  .game__img_mob {
+    display: block;
+    padding-top: 64px;
+  }
+  .game_season {
+    display: grid;
+    width: 343px;
+    height: 218px;
+    padding-top: 51px;
+  }
+  .game_season__heading {
+    font-size: 32px;
+    text-align: center;
+  }
+  .game_season__text {
+    color: #FFF;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 22px;
+    width: 343px;
+    height: 66px;
+  }
+  .game_season__button {
+    color: #FFF;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-left: 65px;
   }
 }/*# sourceMappingURL=style.css.map */
